deploy/kustomize/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-world
spec:
  ports:
  - name: http-port
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: hello-world
  type: NodePort
